--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Your Figma Plugin",
   "main": "code.js",
   "scripts": {
+    "dev": "npx webpack --mode=development --watch",
     "watch": "npx webpack --mode=development --watch",
-    "build": "npx webpack --mode=production"
+    "build": "npx webpack --mode=production",
+    "prettier": "prettier --write ./**/*"
   },
   "author": "Candido Sales Gomes <candidosg@gmail.com>",
   "license": "MIT",
