--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -8,5 +8,5 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-github: [codediodeio]
+github: [candidosales]
 custom: https://www.buymeacoffee.com/candidosales
