--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Format-Code",
-  "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "version": "1.1.0",
+  "description": "A Figma plugin designed to allow you to format and syntax highlighting code",
   "main": "code.js",
   "scripts": {
     "dev": "npx webpack --mode=development --watch",
