--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "author": "Candido Sales Gomes <candidosg@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "highlight.js": "^10.2.1",
-    "prettier": "^2.1.2"
+    "highlight.js": "^11.6.0",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.16.1",
+    "@figma/plugin-typings": "^1.50.0",
     "css-loader": "^4.3.0",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "sass": "1.54.5",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.2"
+    "webpack-cli": "^3.3.12"
   }
 }
