--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "./node_modules/@types",
       "./node_modules/@figma"
     ],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": ["es2021"]
   }
 }
