--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Figma plugin designed to allow you to format and syntax highlighting code",
   "main": "code.js",
   "scripts": {
-    "dev": "npx webpack --mode=development --watch",
-    "watch": "npx webpack --mode=development --watch",
-    "build": "npx webpack --mode=production",
+    "dev": "webpack serve --mode=development",
+    "watch": "webpack serve --mode=development",
+    "build": "webpack --mode=production",
     "prettier": "prettier --write ./**/*"
   },
   "author": "Candido Sales Gomes <candidosg@gmail.com>",
@@ -17,16 +17,18 @@
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.58.0",
-    "css-loader": "^4.3.0",
-    "html-webpack-inline-source-plugin": "^0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "sass": "1.54.5",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.3.0",
-    "ts-loader": "^8.0.4",
+    "css-loader": "^6.7.3",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^5.5.0",
+    "inline-chunk-html-plugin": "^1.1.1",
+    "sass": "1.58.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
