--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,25 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@figma"
-    ],
-    "moduleResolution": "node",
-    "lib": ["es2021"]
-  }
+    ]
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
+
