--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "Candido Sales Gomes <candidosg@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "highlight.js": "^11.7.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "shiki": "^3.0.0"
   },
   "devDependencies": {
     "@figma/eslint-plugin-figma-plugins": "^0.15.0",
