--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Candido Sales Gomes <candidosg@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "flourite": "^1.3.0",
     "prettier": "^2.8.7",
     "shiki": "^3.0.0"
   },
