--- a/package.json
+++ b/package.json
@@ -20,22 +20,21 @@
     "*.{js,jsx,ts,tsx,mjs,cjs}": "pnpm run lint"
   },
   "dependencies": {
-    "flourite": "^1.3.0",
-    "prettier": "^2.8.7",
-    "shiki": "^3.0.0"
+    "flourite": "1.3.0",
+    "prettier": "3.8.1",
+    "shiki": "3.22.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@figma/eslint-plugin-figma-plugins": "^0.15.0",
-    "@figma/plugin-typings": "^1.97.0",
-    "concurrently": "^9.1.0",
-    "esbuild": "^0.24.0",
-    "oxlint": "^1.47.0",
-    "oxlint-tsgolint": "^0.12.2",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.55.0",
-    "vite": "^6.0.0",
-    "vite-plugin-singlefile": "^2.0.0"
+    "@figma/eslint-plugin-figma-plugins": "1.0.0",
+    "@figma/plugin-typings": "1.123.0",
+    "concurrently": "9.2.1",
+    "esbuild": "0.27.3",
+    "oxlint": "1.47.0",
+    "oxlint-tsgolint": "0.12.2",
+    "sass": "1.97.3",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.55.0",
+    "vite": "7.3.1",
+    "vite-plugin-singlefile": "2.3.0"
   }
 }
